--- a/index.html/myHomeworks.html
+++ b/index.html/myHomeworks.html
@@ -15,6 +15,8 @@
     <li><a href="../pages/1_Ordered_and_Unordered_lists.html" target="_blank">OrderedAndUnorderedLists</a></li>
     <li><a href="../pages/2_Nested_lists_food.html" target="_blank">NestedListsFood</a></li>
     <li><a href="../pages/3_Nested_list_music.html" target="_blank">NestedListMusic</a></li>
+    <li><a href="../pages/Slot_Machine.html" target="_blank">SlotMachine</a></li>
+    <li><a href="../pages/Fifa_Table.html" target="_blank">FifaTable</a></li>
 </ol>
 
 </body>
