--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>My Homeworks</h1>
 
  <ol>
-    <li><a href="../pages/CV.html" target="_blank">ElenaCV</a></li>
-    <li><a href="../pages/personalPage.html" target="_blank">PersonalPage</a></li>
-    <li><a href="../pages/1_Ordered_and_Unordered_lists.html" target="_blank">OrderedAndUnorderedLists</a></li>
-    <li><a href="../pages/2_Nested_lists_food.html" target="_blank">NestedListsFood</a></li>
-    <li><a href="../pages/3_Nested_list_music.html" target="_blank">NestedListMusic</a></li>
-    <li><a href="../pages/Slot_Machine.html" target="_blank">SlotMachine</a></li>
-    <li><a href="../pages/Fifa_Table.html" target="_blank">FifaTable</a></li>
+    <li><a href="./pages/CV.html" target="_blank">ElenaCV</a></li>
+    <li><a href="./pages/personalPage.html" target="_blank">PersonalPage</a></li>
+    <li><a href="./pages/1_Ordered_and_Unordered_lists.html" target="_blank">OrderedAndUnorderedLists</a></li>
+    <li><a href="./pages/2_Nested_lists_food.html" target="_blank">NestedListsFood</a></li>
+    <li><a href="./pages/3_Nested_list_music.html" target="_blank">NestedListMusic</a></li>
+    <li><a href="./pages/Slot_Machine.html" target="_blank">SlotMachine</a></li>
+    <li><a href="./pages/Fifa_Table.html" target="_blank">FifaTable</a></li>
 </ol>
 
 </body>
