--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <li><a href="./pages/3_Nested_list_music.html" target="_blank">NestedListMusic</a></li>
     <li><a href="./pages/Slot_Machine.html" target="_blank">SlotMachine</a></li>
     <li><a href="./pages/Fifa_Table.html" target="_blank">FifaTable</a></li>
+    <li><a href="./pages/simpleFormControls.html" target="_blank">FormControls</a></li>
 </ol>
 
 </body>
