--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <li><a href="./pages/Slot_Machine.html" target="_blank">SlotMachine</a></li>
     <li><a href="./pages/Fifa_Table.html" target="_blank">FifaTable</a></li>
     <li><a href="./pages/simpleFormControls.html" target="_blank">FormControls</a></li>
+    <li><a href="./pages/TheCrow.html" target="_blank">TheCrow</a></li>
+    <li><a href="./pages/AphorismsList.html" target="_blank">AphorismsList</a></li>
 </ol>
 
 </body>
