--- a/pages/TheCrow.html
+++ b/pages/TheCrow.html
@@ -24,7 +24,7 @@
        i{
         letter-spacing: 2px;
        }
-       em{
+       span{
         text-decoration:underline 2px rgb(230, 161, 33);
        }
        #author {
@@ -43,9 +43,9 @@
         font-style: italic;
         font-size: medium;
        }
-    .orange{
+    hr{
         color: orange;
-       }
+    }
        #end{
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 17px;
@@ -65,26 +65,26 @@
         скръбен, търсех без сполука мир във тайната наука —<br>
         но оборен в сънна скука, чух внезапно бавен звук. <br>
         <i>„Някой гост навярно чука — казах, вслушан в тихий звук. — <br>
-            Някой гост — и <em>никой друг!“</em></i></p>
+            Някой гост — и <span>никой друг!“</span></i></p>
     <p>Бе декемврий — помня още! — Мрак и мраз от всички нощи; — <br>
             от камина блед отблясък пред прага береше дух. — <br>
             В скръб деня аз чаках всуе! Без надежда пак да чуя  <br>
             с благовест и алилуя името <i>„Ленора“</i> тук!  <br>
             Светлото и рядко име, що шепне вече тук <br>
-            на земята — <em>никой друг!</em></p>
+            на земята — <span>никой друг!</span></p>
     <p>А пурпурните коприни на завесите старинни <br>
         пълнеха нощта пустинна с ужаси при всеки звук. <br>   
         Примълнял до изнемога, в зло предчувствие, в тревога, <br>  
         аз се ободрявах строго: — <i>„Някой гост дошъл е тук! <br>
             Туй е някой гост нечакан, закъснял без покрив тук; <br>
-            някой гост — и <em>никой друг!“</em></i></p>
+            някой гост — и <span>никой друг!“</span></i></p>
     <p>И дори с внезапна дързост тръгнах към вратата бързо, <br>
         като казах: <i>„Извинете! Да! Дочух аз смътен звук; —      <br> 
             но унесен дремех в скука, а тъй слаб и тих бе звука,      <br>
             че когато се почука, аз не се опомних тук…“</i>  —    <br>
         И отворих, за да видя кой тъй късно чука тук? —   <br>
-        Вън бе мрак — и <em>никой друг!</em></p>
-        <hr class="orange"><hr class="orange">
+        Вън бе мрак — и <span>никой друг!</span></p>
+        <hr><hr>
         <p id="end">Роден на 19 януари 1809 г.Второ от трите деца на Дейвид и Елизабет Арнълд По. Родителите му са актьори в Бостън. Баба му, Елизабет Смит Арнълд, както и майка му, англичанка по произход, са известни актриси. Баща му, Дейвид По, ирландец по произход, скоро изоставя семейството си.</p>
         <b>Източник:</b><a href="https://chitanka.info/text/2384-garvanyt">chitanka.info</a>
 </body>
